# FineTuning

./: .gitignore  README.md  dataset_analysis.py  evaluate_dataset.py  evaluate_human_prompts.py  main.py  pyproject.toml  requirements.txt  run_config.yaml  settings.py  to_cloud.py
src/Evaluation/: eval_config.yaml
src/Evaluation/SmallEvaluations/: evaluate.py  google_helper.py
src/Evaluation/StandardEvaluations/: Evaluation.py  __init__.py  config_loader.py  judge.py  metrics.py
src/FineTuning/FunctionGemma/: finetune_config.yaml  setup.py  tools.py
src/FineTuning/FunctionGemma/FullWeights/: Mobile_Action.py
src/FineTuning/tools/: FineTune.py  LoadDataset.py  LoadModel.py  utils.py
tests/: test_prompts.txt
